# Waydir

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: ci.yml  release.yml
docs/: plugins.md
lib/: main.dart
lib/app/: app_info.dart  launch_args.dart  waydir_app.dart  waydir_page.dart  waydir_shell.dart
lib/app/waydir_shell/: actions.dart  base.dart  command_palette.dart  keyboard.dart  menus.dart  terminal.dart
lib/core/archive/: archive_path.dart  archive_reader.dart  archive_writer.dart
lib/core/clipboard/: file_clipboard.dart  macos_clipboard_ffi.dart
lib/core/database/: app_database.dart  app_database.g.dart
lib/core/fs/: checksum_service.dart  directory_watcher_service.dart  file_sort.dart  file_system_service.dart  fs_backend.dart  fs_worker_pool.dart  local_fs.dart  native_copy.dart  passwd_lookup.dart  (+7 more)
lib/i18n/: en.i18n.json  strings.g.dart  strings_en.g.dart
lib/utils/: drag_drop.dart  format.dart
linux/: CMakeLists.txt
linux/runner/: CMakeLists.txt  my_application.cc
linux/runner/window/: CMakeLists.txt  window.cc  window.h  window_api.cc  window_api.h
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner/: AppDelegate.swift  Clipboard.swift  MainFlutterWindow.swift
macos/Runner.xcodeproj/: project.pbxproj
rust/waydir_core/: Cargo.toml  build.rs
rust/waydir_core/src/: codec.rs  enumerate.rs  folder_scan.rs  lib.rs  list.rs  pdf.rs  plugin.rs  pty.rs  search.rs  trash.rs  util.rs  walker.rs
rust/waydir_core/src/sftp/: auth.rs  mod.rs  ops.rs  runtime.rs  session.rs
scripts/: build_waydir_core.sh  build_waydir_core_windows.ps1  check.sh  mock_update_server.py  vendor_libarchive_linux.sh
test/integration/: plugin_ffi_test.dart  smb_live_discovery_test.dart
test/support/: ops.dart
test/theme/: app_theme_definition_test.dart  app_theme_test.dart
test/unit/: plugin_shortcut_test.dart  plugin_when_test.dart  rename_focus_return_test.dart
windows/: CMakeLists.txt
windows/runner/: CMakeLists.txt  main.cpp
windows/runner/window/: CMakeLists.txt  window.cpp  window.h  window_api.cpp  window_api.h
(+243 files in other folders)
