[package]
name = "waydir_core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "waydir_core"

[dependencies]
ignore = "0.4"
trash = "5.2.6"
globset = "0.4.18"
regex = "1.12.3"
russh = "0.45"
russh-sftp = "2"
russh-keys = "0.45"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util", "macros", "time", "net"] }
once_cell = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
