[package]
name = "waydir_core"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]
name = "waydir_core"

[dependencies]
ignore = "0.4"
trash = "5.2.6"
globset = "0.4.18"
regex = "1.12.3"
russh = { version = "0.61.1", default-features = false, features = ["flate2", "ring", "rsa"] }
russh-sftp = "2"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "io-util", "macros", "time", "net"] }
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.9"
mlua = { version = "0.11.6", features = ["lua54", "vendored", "serde"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
